# Rpi_PICO_RP2040_ST7796_Driver

./: 2.h  CMakeLists.txt  README.md  main.cpp
ST7796DriverPioSpi/: CMakeLists.txt  driver.cpp  driver.h
UartReceiver/: CMakeLists.txt  receiver.cpp  receiver.h
